Add mail and PGP key to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Profile: SoptikHa2</title>
+		<title>Petr Šťastný</title>
 		
 		<meta name="viewport" content="width=device-width, maximum-scale=1.0">
 		<link rel="icon" type="image/png" href="img/favicon.png" sizes="64x64">
@@ -10,6 +10,18 @@
 		<script src="js/base.js"></script>
 	</head>
 	<body>
-		
+		<h1>
+			Petr Šťastný	
+		</h1>
+		<p>
+			<a href="mailto:petr.stastny01@gmail.com">
+				<pre>
+					petr.stastny01@gmail.com
+				</pre>
+			</a>
+		</p>
+		<p>
+			Public PGP Key: <a href="pgp-public-key.txt">9DF9 28DF 3EA2 7604 21B1  ED3C 3BE4 507F 2C0C 2FB6</a>
+		</p>
 	</body>
 </html>
