Fixed whitespaces at email

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 		</h1>
 		<p>
 			<a href="mailto:petr.stastny01@gmail.com">
-				<pre>
-					petr.stastny01@gmail.com
-				</pre>
+				<pre>petr.stastny01@gmail.com</pre>
 			</a>
 		</p>
 		<p>
